--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -15,7 +15,14 @@
 
 <body>
 
-
+    <nav>
+        <div class="navlogo">
+            <img src="/static/imagies/logo.jpg" alt="">
+        </div>
+        <div class="menu">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </nav>
 
     <!-- Login Register Section -->
     <div class="button-container">
