--- a/static/main.css
+++ b/static/main.css
@@ -5,9 +5,13 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f8f8f8;
+  background-color: #fff;
   text-align: center;
   overflow-x: hidden;
+}
+
+nav{
+  display: flex;
 }
 
 .logo img {
