--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -184,7 +184,7 @@
 
     <!-- Loading spinner -->
     <div id="loading" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 100;">
-        <div class="loader">Loading...</div>
+        <div class="loader"></div>
     </div>
 
     <script>
