--- a/staticfiles/book-detail.css
+++ b/staticfiles/book-detail.css
@@ -9,12 +9,14 @@
 .header {
   background: #1e3a52;
   color: #fff;
-  padding: 20px;
+  padding: 25px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 150%; /* Add this line to make the header expand horizontally */
+  width: 250x;
 }
 
 .header h2 {
@@ -31,11 +33,14 @@
 }
 
 .book-detail img {
-  max-width: 200px;
-  max-height: 300px; /* Ensure the image has a maximum height */
-  margin-right: 20px;
+  max-width: 220px;
+  max-height: 400px; /* Ensure the image has a maximum height */
+  width: 155%;
+  height: 155%;
+  margin-right: 30px;
   object-fit: cover; /* Ensure the image covers the area properly */
   border-radius: 5px; /* Optional: to match the rounded container style */
+  padding-right: 50px;
 }
 
 .book-info {
@@ -45,7 +50,7 @@
 }
 
 .book-title h1 {
-  font-size: 24px;
+  font-size: 36px;
   margin: 0;
 }
 
@@ -53,6 +58,42 @@
   margin: 10px 0;
 }
 
+.book-author {
+  font-size: 25px;
+}
+
+.book-description {
+  font-size: 16px;
+  width: 150%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.book-published {
+  font-size: 22px;
+}
+
+
+.book-buy-link {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.buy-button {
+  display: inline-block;
+  background-color: #4caf50; /* Green background */
+  color: white; /* White text */
+  padding: 10px 20px; /* Padding for size */
+  border-radius: 25px; /* Rounded corners */
+  text-decoration: none; /* Remove underline */
+  font-size: 16px; /* Adjust font size */
+  font-weight: bold; /* Make text bold */
+  text-align: center; /* Center the text */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.buy-button:hover {
+  background-color: #388e3c; /* Darker green on hover */
+}
 /* Genres */
 .genres {
   display: flex;
@@ -78,7 +119,7 @@
 }
 
 .rating-value {
-  font-size: 24px;
+  font-size: 30px;
   margin-left: 10px;
 }
 
@@ -86,6 +127,7 @@
 .voting-section {
   text-align: center;
   margin: 20px 0;
+  padding-right: 275px;
 }
 
 .vote-button {
@@ -94,16 +136,19 @@
   border-radius: 5px;
   cursor: pointer;
   margin-right: 10px;
+
 }
 
 .vote-up {
   background: #4caf50;
   color: #fff;
+ 
 }
 
 .vote-down {
   background: #f44336;
   color: #fff;
+
 }
 
 .vote p {
