--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,6 +1,5 @@
 <!-- index.html -->
 {% extends 'main.html' %}
-
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -12,52 +11,29 @@
     <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
-
     <!-- Display the form -->
     <h1>Welcome to BookAi</h1>
-
         <!-- Check if the user is authenticated and display their username -->
     {% if user.is_authenticated %}
         <p>Hello, {{ user.username }}!</p>
     {% else %}
-        
     {% endif %}
-
-
-    <div class="rectangle">
+    <!-- <div class="rectangle">
         Your long text goes here. 
-    </div>
+    </div> -->
     
 
-    
-    <div class="button-container">
-        <div class="login-button">
-            <button id="loginBtn">Login</button>
-        </div>
-        <div class="register-button">
-            <button id="registerBtn">Register</button>
-        </div>
-
-        <!-- Logout button -->
-        {% if user.is_authenticated %}
-        <div class="logout-button">
-            <button type="button" class="logout-button" id="logoutButton">Logout</button>
-        </div>
-    {% endif %}
-    <div id="logout-message" style="color: green;"></div> <!-- Logout message placeholder -->
-
-    </div>
+<div class="forms">
+    <div class="box">
     <div class="dropdown">
-    <div id="formDescription" class="form-description">Select a form to see more details.</div>
-    <button id="formSelectBtn" class="dropbtn" >Form with Questions</button>
-    <div id="formDropdown" class="dropdown-content">
-        <a href="#" data-description="Use this form to answer specific questions about your reading preferences." onclick="selectForm('form1', 'Form with Questions')">Form with Questions</a>
-        <a href="#" data-description="Use this form to describe your reading preferences in a paragraph." onclick="selectForm('form2', 'Form with Paragraph')">Form with Paragraph</a>
-        <!-- Add more form options as needed -->
-    </div>
-</div>
-
-    
+        <div id="formDescription" class="form-description">Select a form to see more details.</div>
+        <button id="formSelectBtn" class="dropbtn" >Form with Questions</button>
+        <div id="formDropdown" class="dropdown-content">
+            <a href="#" data-description="Use this form to answer specific questions about your reading preferences." onclick="selectForm('form1', 'Form with Questions')">Form with Questions</a>
+            <a href="#" data-description="Use this form to describe your reading preferences in a paragraph." onclick="selectForm('form2', 'Form with Paragraph')">Form with Paragraph</a>
+            <!-- Add more form options as needed -->
+        </div>
+    </div> 
     <div id="form1" class="form-container">
         <form id="recommendationForm" method="POST" action="{% url 'recommended_books' %}">
             {% csrf_token %}
@@ -71,8 +47,29 @@
             <label for="pacing_narrative_style">Your pacing and narrative style preferences:</label><br>
             <input type="text" id="pacing_narrative_style" name="pacing_narrative_style" placeholder="Pacing/Narrative Style"><br>
             <button type="submit" id="recBtn">Get Book Recommendations</button>
+            <div class="quick-recommendation">
+                <form id="quickRecommendationForm" method="POST" action="{% url 'recommended_books' %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="action" value="by_personality">
+                    <button type="submit" id="quickRecBtn">Surprise Me!</button>
+                </form>
+            </div>
         </form>
+        
     </div>
+    
+    </div>
+    <div class="box">
+        <body data-get-read-books-url="{% url 'get_read_books' %}"></body>
+    <div class="read-books-container" id="readBooksList">
+        <!-- Books will be loaded here by JavaScript -->
+    </div>
+    <!-- Loading spinner -->
+    <div id="loading" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 100;">
+        <div class="loader">Loading...</div>
+    </div>
+    </div>
+    
     
     <div id="form2" class="form-container" style="display: none;">
         <form id="paragraphForm" method="POST" action="{% url 'recommended_books' %}">
@@ -83,27 +80,15 @@
             <button type="submit" id="paraBtn">Get Book Recommendations</button>
         </form>
     </div>
-    
-        
-
-    <div class="quick-recommendation">
-        <h2>Quick Book Recommendation</h2>
-        <p>Don't want to answer questions? Let us surprise you with a book recommendation based on your curated book personality!</p>
-        <form id="quickRecommendationForm" method="POST" action="{% url 'recommended_books' %}">
-            {% csrf_token %}
-            <input type="hidden" name="action" value="by_personality">
-            <button type="submit" id="quickRecBtn">Surprise Me!</button>
-        </form>
-    </div>
+</div>
 
 
+<!--  -->
 
     <div id="bookColumns" class="book-columns">
         <div id="column1" class="book-column"></div>
         <div id="column2" class="book-column"></div>
     </div>
-    
-
     <!-- Login Modal -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
@@ -126,11 +111,6 @@
             </form>
         </div>
     </div>
-    
-    
-    
-
-
     <!-- Text for Result -->
     <p id="resultText"></p>
 
@@ -168,24 +148,6 @@
         </div>
     </div>
     
-    
-    
-    
-    
-
-    <body data-get-read-books-url="{% url 'get_read_books' %}"></body>
-
-    
-        
-    <div class="read-books-container" id="readBooksList">
-        <!-- Books will be loaded here by JavaScript -->
-    </div>
-    
-
-    <!-- Loading spinner -->
-    <div id="loading" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 100;">
-        <div class="loader"></div>
-    </div>
 
     <script>
         document.getElementById('logoutButton').addEventListener('click', function() {
